# projeto_mer

./: .gitignore  README.md  analise_tcc.py  benchmark.py  compute_stats.py  dataset.py  evaluate_chorus.py  main.ipynb  model.py  plot_estrutura.py  plot_pipeline.py  predict.py  preprocess.py  preprocess_deam.py  pyproject.toml  resultados_resnet18_mel_dinamico.json  resultados_resnet18_stft_dinamico.json  train.py
analises/: benchmark.ipynb
data/: dynamic_annotations.csv  static_annotations.csv  stats.json
resultados/: resultados_resnet18_mfcc_dinamico.json
