[project]
name = "projeto-mer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.1",
    "audioread==3.1.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "filelock==3.25.2",
    "fonttools==4.62.1",
    "fsspec==2026.2.0",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.12.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "lazy-loader==0.5",
    "librosa==0.11.0",
    "llvmlite==0.46.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numba==0.64.0",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==3.0.1",
    "parso==0.8.6",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "pooch==1.9.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pycparser==3.0",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "requests==2.33.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==70.2.0",
    "six==1.17.0",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.12.0.dev20260327+cu128",
    "torchaudio==2.11.0.dev20260327+cu128",
    "torchvision==0.26.0.dev20260327+cu128",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
]
